--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "format": "npx prettier --write ."
     },
     "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "next": "14.2.15",
         "react": "^18",
         "react-dom": "^18"
