--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dependencies": {
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "lodash": "^4.17.21",
         "next": "14.2.15",
         "react": "^18",
         "react-dom": "^18"
     },
     "devDependencies": {
+        "@types/lodash": "^4.17.10",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
