--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "framer-motion": "^11.11.9",
         "lodash": "^4.17.21",
         "next": "14.2.15",
         "react": "^18",
